IDEMPIERE-4067: Corrected overlapping overline with function group line and Report last line breaking.